--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "start": "next start",
     "generate": "npm -s run generate:prisma && npm -s run generate:nexus",
     "generate:prisma": "prisma generate",
-    "generate:nexus": "ts-node --transpile-only -P nexus.tsconfig.json pages/api"
+    "generate:nexus": "ts-node --transpile-only -P nexus.tsconfig.json pages/api",
+    "deploy": "prisma deploy",
+    "prisma": "yarn run deploy && yarn run generate",
+    "save": "npx prisma migrate save --experimental",
+    "up": "npx prisma migrate up --experimental"
   },
   "dependencies": {
     "@apollo/react-hooks": "3.1.5",
     "@apollo/react-ssr": "3.1.5",
-    "@prisma/client": "2.0.0-beta.5",
+    "@prisma/cli": "^2.0.0-beta.5",
+    "@prisma/client": "^2.0.0-beta.5",
     "apollo-boost": "0.4.9",
     "apollo-link-http": "1.5.17",
     "apollo-link-schema": "1.2.5",
@@ -31,7 +36,6 @@
     "react-markdown": "4.3.1"
   },
   "devDependencies": {
-    "@prisma/cli": "2.0.0-beta.5",
     "@types/graphql": "14.5.0",
     "@types/node": "13.13.6",
     "@types/react": "16.9.35",
