--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   "dependencies": {
     "@apollo/react-hooks": "3.1.5",
     "@apollo/react-ssr": "3.1.5",
-    "@prisma/cli": "^2.0.0-beta.5",
     "@prisma/client": "^2.0.0-beta.5",
     "apollo-boost": "0.4.9",
     "apollo-link-http": "1.5.17",
@@ -39,6 +38,7 @@
     "@types/graphql": "14.5.0",
     "@types/node": "13.13.6",
     "@types/react": "16.9.35",
-    "typescript": "3.9.2"
+    "typescript": "3.9.2",
+    "@prisma/cli": "^2.0.0-beta.5"
   }
 }
